crates/oxvg_lint/src/snapshots/oxvg_lint__error__print_many_error_single_line.snap
---
source: crates/oxvg_lint/src/error.rs
expression: result
---
 [31m× Unknown attribute `foo` for element <svg>[0m
   ╭─[[34m[0m:1:5]
 1 │ <svg foo="bar" bar="baz" />
   ·      [35m─────────[0m
   ╰────
 [31m× Unknown attribute `bar` for element <svg>[0m
   ╭─[[34m[0m:1:15]
 1 │ <svg foo="bar" bar="baz" />
   ·                [35m─────────[0m
   ╰────
