crates/oxvg_lint/src/snapshots/oxvg_lint__error__print_path.snap
---
source: crates/oxvg_lint/src/error.rs
expression: result
---
 [31m× Unknown attribute `foo` for element <svg>[0m
   ╭─[[34m./file[0m:1:5]
 1 │ <svg foo="bar" />
   ·      [35m─────────[0m
   ╰────
