crates/oxvg_lint/src/snapshots/oxvg_lint__error__print_single_error_many_line.snap
---
source: crates/oxvg_lint/src/error.rs
expression: result
---
 [31m× Unknown attribute `foo` for element <rect>[0m
   ╭─[[34m[0m:2:47]
 1 │ <svg>
 2 │     <rect x="10" y="10" width="10" height="10" foo="bar" />
   ·                                                [35m─────────[0m
 3 │ </svg>
   ╰────
