crates/oxvg_lint/src/snapshots/oxvg_lint__error__print_single_error_single_line.snap
---
source: crates/oxvg_lint/src/error.rs
expression: result
---
 [31m× Unknown attribute `foo` for element <svg>[0m
   ╭─[[34m[0m:1:5]
 1 │ <svg foo="bar" />
   ·      [35m─────────[0m
   ╰────
